test/runnable/eqtest.nt
module eqtest;

macro import neat.macros.assert;

void main() {
    char ch = "A"[0];
    assert(ch == "A"[0]);
}
