test/fail_compilation/mutable.nt
module mutable;

void main() {
    int[] array;
    array ~= 5;
}
